shellclear/tests/snapshots/sensitive_patterns_test__aws_cred.snap
---
source: shellclear/tests/sensitive-patterns_test.rs
expression: results
---
[
    TestPatternResult {
        name: "detect aws_access_key_id",
        detect: "AKISHELLCLEAREXAMPLE",
        expected: "AKISHELLCLEAREXAMPLE",
    },
]
