shellclear/tests/snapshots/sensitive_patterns_test__aws_end_access_key.snap
---
source: shellclear/tests/sensitive-patterns_test.rs
expression: results
---
[
    TestPatternResult {
        name: "detect AWS_ACCESS_KEY_ID environment variable",
        test: "AWS_ACCESS_KEY_ID=AKISHELLCLEAREXAMPLE",
        detect: "AKISHELLCLEAREXAMPLE",
        expected: "AKISHELLCLEAREXAMPLE",
    },
    TestPatternResult {
        name: "detect AWS_ACCESS_KEY_ID environment variable with space",
        test: "AWS_ACCESS_KEY_ID=AKISHELLCLEAREXAMPLE AAA",
        detect: "AKISHELLCLEAREXAMPLE",
        expected: "AKISHELLCLEAREXAMPLE",
    },
]
