shellclear/tests/snapshots/sensitive_patterns_test__aws_env_secret_key.snap
---
source: shellclear/tests/sensitive-patterns_test.rs
expression: results
---
[
    TestPatternResult {
        name: "detect AWS_SECRET_ACCESS_KEY environment variable",
        test: "AWS_SECRET_ACCESS_KEY=AKISHELLCLEAREXAMPLE",
        detect: "AKISHELLCLEAREXAMPLE",
        expected: "AKISHELLCLEAREXAMPLE",
    },
    TestPatternResult {
        name: "detect AWS_SECRET_ACCESS_KEY environment variable with space",
        test: "AWS_SECRET_ACCESS_KEY=AKISHELLCLEAREXAMPLE AAA",
        detect: "AKISHELLCLEAREXAMPLE",
        expected: "AKISHELLCLEAREXAMPLE",
    },
]
