shellclear/tests/snapshots/sensitive_patterns_test__cloudflare_env_api_key.snap
---
source: shellclear/tests/sensitive-patterns_test.rs
expression: results
---
[
    TestPatternResult {
        name: "detect CLOUDFLARE_API_KEY environment variable",
        test: "CLOUDFLARE_API_KEY=shellclear",
        detect: "shellclear",
        expected: "shellclear",
    },
]
