shellclear/tests/snapshots/sensitive_patterns_test__curl_user_login.snap
---
source: shellclear/tests/sensitive-patterns_test.rs
expression: results
---
[
    TestPatternResult {
        name: "detect curl -u user:pass",
        test: "curl -u user:pass https://priv/",
        detect: "user:pass",
        expected: "user:pass",
    },
    TestPatternResult {
        name: "detect curl --user user:pass",
        test: "curl --user user:pass https://priv/",
        detect: "user:pass",
        expected: "user:pass",
    },
]
