shellclear/tests/snapshots/sensitive_patterns_test__datadog_key.snap
---
source: shellclear/tests/sensitive-patterns_test.rs
expression: results
---
[
    TestPatternResult {
        name: "Detect Datadog key",
        test: "datadog=12345vea12345cb23cdb2b4cbe2e6798e0faab22",
        detect: "12345vea12345cb23cdb2b4cbe2e6798e0faab22",
        expected: "12345vea12345cb23cdb2b4cbe2e6798e0faab22",
    },
]
