shellclear/tests/snapshots/sensitive_patterns_test__diskutil_password.snap
---
source: shellclear/tests/sensitive-patterns_test.rs
expression: results
---
[
    TestPatternResult {
        name: "detect passphrase value in diskutil command",
        test: "diskutil daapfs unlockVolume       /dev/XXX -passphrase shellClearPASSWord!@#$% asdas asdasd",
        detect: "shellClearPASSWord!@#$%",
        expected: "shellClearPASSWord!@#$%",
    },
]
