shellclear/tests/snapshots/sensitive_patterns_test__facebook_access_token.snap
---
source: shellclear/tests/sensitive-patterns_test.rs
expression: results
---
[
    TestPatternResult {
        name: "Detect Facebook Access Token",
        test: "EAACEdEose0cBABaAxVtmW2jBmndwtbPfXxZBHCjiJR1eyMez3ZaHfPttYOxAA2deO9EBEERaaaPXHx8F6wfXd7yQTo11nPJEymEYSLhl4nOpZBoiJaecZC30ZARVkIiqHtsTZBWGvvaafOm2R9tfZPsXh1cWb9s1VBzDXSKP7aPaQQQQQQQ",
        detect: "EAACEdEose0cBABaAxVtmW2jBmndwtbPfXxZBHCjiJR1eyMez3ZaHfPttYOxAA2deO9EBEERaaaPXHx8F6wfXd7yQTo11nPJEymEYSLhl4nOpZBoiJaecZC30ZARVkIiqHtsTZBWGvvaafOm2R9tfZPsXh1cWb9s1VBzDXSKP7aPaQQQQQQQ",
        expected: "EAACEdEose0cBABaAxVtmW2jBmndwtbPfXxZBHCjiJR1eyMez3ZaHfPttYOxAA2deO9EBEERaaaPXHx8F6wfXd7yQTo11nPJEymEYSLhl4nOpZBoiJaecZC30ZARVkIiqHtsTZBWGvvaafOm2R9tfZPsXh1cWb9s1VBzDXSKP7aPaQQQQQQQ",
    },
]
